# map-reduce

./: .gitignore  CMakeLists.txt  README.md
src/: Scheduler.cc  Scheduler.cpp  ThreadPool.cc  ThreadPool.cpp  Worker.cc  Worker.cpp  main.cpp
src/include/: Logger.h  Scheduler.h  ThreadPool.h  Worker.h
